--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/router": "^19.2.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.12.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.1.0",
     "pdfmake": "^0.2.20",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.3",
     "tslib": "^2.3.0",
@@ -42,6 +44,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/pdfmake": "^0.2.12",
+    "@types/qrcode": "^1.5.6",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
